--- a/css/style.css
+++ b/css/style.css
@@ -671,7 +671,7 @@ ul.card-list li:last-of-type {
 ul.list-checkmarks li {
     text-align: left;
     list-style-image: none;
-    background: url(../assets/checkmark.png) top left no-repeat;
+    background: url(../assets/icon/checkmark.png) top left no-repeat;
     background-position: 0 2px;
     margin: 10px 0;
     padding: 0 10px 10px 40px;
