--- a/css/splash.css
+++ b/css/splash.css
@@ -1,60 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    /*font-family: 'Times New Roman', Times, serif;*/
-    
-
-
-}
-
-header{
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 80px;
-
-
-
-}
-
-header h4{
-    position: absolute;
-    left: 10%;
-    bottom: 1rem;
-    font-size: 1.6rem;
-
-
-}
 /*Splash screen*/
-.intro{
+.intro {
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100vh;
-    background-color: #0f1b32;
+    background-color: #7ce7b4;
     transition: 1s;
 }
 
-.logo-header{
+.logo-header {
     position: absolute;
     top: 40%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    /* color: #2299bb; */
-    color: #9fd8d5;
-    font-family:takota;
-    font-size: 100px;
-    
+    transform: translate(-50%, -50%);
+    color: #222e44;
+    font-family: Montserrat;
+    font-size: 50px;
+
 
 }
 
-.logo{
+.logo {
     position: relative;
     display: inline-block;
     bottom: -20px;
@@ -62,187 +30,46 @@ header h4{
 }
 
 
-.logo.active{
+.logo.active {
     bottom: 0;
     opacity: 1;
     transition: ease-in-out 0.5s;
 
 }
 
-.logo.fade{
+.logo.fade {
     bottom: 150px;
     opacity: 0;
     transition: ease-in-out 0.5s;
 }
 
-.mission{
-    display: inline-block;
+.mission {
     text-align: center;
     font-size: medium;
-    /* font: 1em sans-serif; */
-    padding-top: 5rem ;
+    font: 1em 'Montserrat', sans-serif;
+    padding-top: 30rem;
     /*look this when going to mobile*/
     padding-left: 10rem;
     padding-right: 10rem;
-    font-family:"Poppins", sans-serif;
-
-    
-    
-
-    
 
 }
 
-.mission h2{
-    text-align: center;
-    animation: fadeUp 7s;
+
+.members li {
+    display: inline;
+    font-size: medium;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-
-.text{
-    font-size: 2rem;
-    /* letter-spacing: 5px; */
-   
-    /*Adding the boarder as the cursor*/
-    /* border-right: 5px solid; */
-    
-    width: 100%;
-    /* white-space:nowrap; */
-    overflow: hidden;
-    white-space: pre-wrap;
-    /* animation: typing 4s steps(50),
-                cursor .4s step-end infinite alternate; */
-    display: inline-block;
-    
-    
-    
-}
-
-
-.animateText{
-    /* animation: typing 4s steps(50),
-                cursor .4s step-end infinite alternate; */
-    animation: fadeUp 1s;
-}
-
-.animateImages{
-    animation: fadeUp 10s;
-}
-
-/*Adding the cursor animation*/
-@keyframes cursor {
-    50% {border-color:transparent}
-    
-}
-
-/*Typing animation*/
-@keyframes typing {
-    from{width : 0}
-    to{width: 100%;}
-}
-
-/*fade up animation*/
-@keyframes fadeUp {
-    0%{
-        opacity: 0;
-        transform: translateY(30px)scale(0.9);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateY(0px)scale(1);
-    }
-
-    
-}
-
-
-
-/*Profile images*/
 .members {
     position: absolute;
-    left: 50%; 
-    transform: translate(-50%, -50%); 
-    text-align:center; 
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*Height adjestment*/
-    padding-top: 100px;
-    grid-template-columns: repeat(4,1rem);
-    gap: 50px;
-    
-
-
-    
+    /*top: 50%; /* Place the top edge of the element at the vertical center */
+    left: 50%; /* Place the left edge of the element at the horizontal center */
+    transform: translate(-50%, -50%); /* Move the element up and left by half of its own width and height */
+    text-align: center; /* Center the text inside the div */
 }
 
-
-
-
-.members img{
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    /* border:5px solid #0f1b32; */
-    filter: drop-shadow(0 10px 20px rgba(95, 94, 94, 0.6));
-    
-    
-
-}
-
-.members h3{
-    font-family:"Poppins", sans-serif;
-    
-}
-
-.mainHeading h1{
-    font-family:Takota;
-    font-size: 50px;
-    text-align: center;
-
-    
-}
-
-body{
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    /*added the no-repeat center center fixed*/
-    background: url('./SplashImages/bg-9.png')no-repeat center center fixed;
-    background-size: cover;
-    background-position: center;
-    
-}
-
-.glassEffect{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 800px;
-    height: 550px;
-    background: rgba(255, 255, 255, .1);
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 25px 45px rgba(0, 0, 0, .2);
-    border-radius: 40px;
-    border:1px rgba(255, 255, 255, .5 );
-    border-right: 2px rgba(255, 255, 255, .2 );
-    border-bottom: 2px rgba(255, 255, 255, .2 );
-    backdrop-filter: blur(2px);
-
-
-
-
-}
-
-
-
-/*Add an animation to rice after the typing is done*/
 
 
 
